fixed alignment and other queries

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -141,16 +141,3 @@
 
 }
 
-@media only screen and (max-width: 415px) {
-    .icon-big {
-        margin-left: 164px;
-    }
-    
-}
-
-@media only screen and (max-width: 376px) {
-    .icon-big {
-        margin-left: 150px;
-    }
-    
-}
