--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -131,7 +131,7 @@ h2:after {
     display: block;
     color: #e67e22;
     margin-bottom: 10px;
-    margin-left: 90px;
+    text-align: center;
 }
 
 .icon-small {
